# anomaly-detection-demo

./: .gitignore  README.md  autostart.sh  devenv.nix  devenv.yaml  initial_pi_setup.sh  pyproject.toml  slurm_run_training.sh
experiments/: anomaly_detector_playground.py  continuous_fps_estimation.py  definitions.py  train_cookie_autoencoder.py  train_mvtec_autoencoder.py
model_checkpoints/cookie/: commit_hash.txt  history.csv  model.pt
model_checkpoints/mvtec/: commit_hash.txt  history.csv
notebooks/: anomaly_detection.ipynb  anomaly_detection_with_tfunc.ipynb  data_exploration.ipynb
notebooks/cookies/: anomaly_detection.ipynb  classifier.py  data_exploration.ipynb
notebooks/mvtec/: anomaly_detection.ipynb  anomaly_detection_with_tfunc.ipynb  data_exploration.ipynb
src/: anomaly_detector.py  model.py  mvtec_ad.py  plotting.py  preprocessing.py  reproducibility.py  train_autoencoder.py  training.py
src/anomaly_detection/: anomaly_detector.py  model.py  persistence.py  preprocessing.py  training.py
src/anomaly_detection/datasets/: cookie_ad.py  cookie_clf.py  image_utils.py
src/anomaly_detection/datasets/mvtec_ad/: dataset.py
src/anomaly_detection/experiments/: anomaly_detector_playground.py  continuous_fps_estimation.py  train_cookie_ad_model.py  train_cookie_autoencoder.py  train_mvtec_autoencoder.py  training_definitions.py
src/anomaly_detection/experiments/cookie/: train_all_models.py  train_autoencoder.py  train_classifier.py
src/anomaly_detection/model_checkpoints/cookie/: ad_model.pt  ae_history.csv  ae_model.pt  classification_report.txt  clf_history.csv  clf_model.pt  commit_hash.txt  history.csv
src/anomaly_detection/model_checkpoints/mvtec/: history.csv
src/anomaly_detection/notebooks/cookies/: anomaly_detection.ipynb  anomaly_detection.py  classifier.py  data_exploration.ipynb  data_exploration.py  evaluate_ad_model.py  plot_latent_space.py
src/anomaly_detection/notebooks/mvtec/: anomaly_detection.ipynb  anomaly_detection_with_tfunc.ipynb  data_exploration.ipynb
src/datasets/: __init__.py  cookie_ad.py  in_memory_dataset.py
src/datasets/mvtec_ad/: __init__.py  constants.py  dataset.py
src/demo/anomaly_detection/: anomaly_detector.py  dataset_recorder.py  reproducibility.py  training.py
src/demo/anomaly_detection/datasets/: cookie_ad.py
src/demo/anomaly_detection/datasets/mvtec_ad/: __init__.py  dataset.py
src/demo/anomaly_detection/experiments/: anomaly_detector_playground.py  continuous_fps_estimation.py  training_definitions.py
src/demo/anomaly_detection/experiments/cookie/: train_autoencoder.py
src/demo/anomaly_detection/experiments/mvtec/: train_autoencoder.py
src/demo/anomaly_detection/model_checkpoints/cookie/: ae_base_history.csv  ae_base_model.pt  (+4 more)
src/demo/camera/: camera.py  opencv_camera.py  picamv3_camera.py
src/demo/dataset_recording/: crop_recorded_images.py  dataset_recorder.py  utils.py
src/demo/web_app/: demo_application_controller.py  image_processing.py  main.py
src/demo_interface/: api.py  camera.py  demo.py  demo_application_controller.py  image.py  image_processing.py  only_opencv.py  picamv3_camera.py  test_only_opencv.py  utils.py
(+8 files in other folders)
