[project]
name = "anomaly-detection-demo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Julian Hoever", email = "julianhoever@posteo.de" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
